--- a/auth0/tenant.yaml
+++ b/auth0/tenant.yaml
@@ -150,7 +150,7 @@ resourceServers:
     token_lifetime: 86400
     token_lifetime_for_web: 7200
 clients:
-  - name: Patient Picker Client Credentials
+  - name: Moyae Login
     app_type: non_interactive
     cross_origin_auth: false
     custom_login_page_on: true
@@ -174,49 +174,13 @@ clients:
     sso_disabled: false
     token_endpoint_auth_method: client_secret_post
 
-  - name: Inferno FHIR Test Suite - Confidential
-    allowed_clients: []
-    app_type: regular_web
-    callbacks:
-      - https://inferno.healthit.gov/community/oauth2/static/redirect
-      - https://inferno.healthit.gov/suites/custom/smart/redirect
-    client_aliases: []
-    cross_origin_auth: false
-    custom_login_page_on: true
-    grant_types:
-      - authorization_code
-      - refresh_token
-    is_first_party: true
-    is_token_endpoint_ip_header_trusted: false
-    jwt_configuration:
-      alg: RS256
-      lifetime_in_seconds: 36000
-      secret_encoded: false
-    logo_uri: https://logo.clearbit.com/auth0.com
-    native_social_login:
-      apple:
-        enabled: false
-      facebook:
-        enabled: false
-    oidc_conformant: true
-    refresh_token:
-      expiration_type: non-expiring
-      leeway: 0
-      infinite_token_lifetime: true
-      infinite_idle_token_lifetime: true
-      token_lifetime: 31557600
-      idle_token_lifetime: 2592000
-      rotation_type: non-rotating
-    sso_disabled: false
-    token_endpoint_auth_method: client_secret_post
-
 tenant:
   default_audience: ##FHIR_BASE_URL##
   flags: #I need at least 1 flag for validation. Lets use this as it seems low risk to have this setting.
     disable_clickjack_protection_headers: false
 
 clientGrants:
-  - client_id: Patient Picker Client Credentials
+  - client_id: Moyae Login
     audience: https://##AUTH0_DOMAIN##/api/v2/
     scope:
       - read:clients
